--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+###### Database Properties  ###########################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/reddits?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=phanngochoang
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+############# Mail Properties ###########################################
+###spring.mail.host=smtp.mailtrap.io
+###spring.mail.port=25
+###spring.mail.username=<your-username>
+###spring.mail.password=<your-password>
+###spring.mail.protocol=smtp
