--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
-###spring.mail.host=smtp.mailtrap.io
-###spring.mail.port=25
-###spring.mail.username=<your-username>
-###spring.mail.password=<your-password>
-###spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=<your-username>
+spring.mail.password=<your-password>
+spring.mail.protocol=smtp
