--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
-spring.mail.username=<your-username>
-spring.mail.password=<your-password>
+spring.mail.username=phanngochoang1995@gmail.com
+spring.mail.password=phanngochoang
 spring.mail.protocol=smtp
