--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,13 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8 -->
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-jdk8</artifactId>
-            <version>1.3.1.Final</version>
-        </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${org.mapstruct.version}</version>
+            </dependency>
+
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -153,6 +155,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>5.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.5</version>
         </dependency>
 
 
